<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="15dp"
            android:src="@drawable/atlas_claim" />

        <EditText
            android:id="@+id/gateway_ip_port_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="45dp"
            android:layout_marginRight="30dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/text_editor"
            android:ems="10"
            android:hint="@string/gateway_claim_hint_ip"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:padding="10dp"
            android:textAlignment="center" />

        <EditText
            android:id="@+id/gateway_short_code_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="30dp"
            android:layout_marginBottom="15dp"
            android:background="@drawable/text_editor"
            android:ems="10"
            android:hint="@string/gateway_claim_hint_code"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:padding="10dp"
            android:textAlignment="center" />

        <EditText
            android:id="@+id/gateway_alias_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="30dp"
            android:layout_marginBottom="15dp"
            android:background="@drawable/text_editor"
            android:ems="10"
            android:hint="@string/gateway_claim_hint_alias"
            android:importantForAutofill="no"
            android:inputType="text"
            android:padding="10dp"
            android:textAlignment="center" />

        <Button
            android:id="@+id/claimButton"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp"
            android:background="@drawable/button"
            android:text="@string/gateway_claim_button"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:text="@string/gateway_claim_note"
            android:textAlignment="center"
            android:textStyle="italic" />

    </LinearLayout>
</ScrollView>