<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable name="gateway" type="com.atlas.model.database.AtlasGateway" />
        <variable name="callback" type="com.atlas.ui.gateway_list.view.GatewayClickCallback" />
    </data>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="3dp"
        android:layout_marginRight="3dp"
        android:onClick="@{ () -> callback.onClick(gateway)}"
        android:orientation="horizontal"
        app:cardUseCompatPadding="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?android:attr/selectableItemBackground"
            android:clipToPadding="false"
            android:paddingVertical="3dp"
            android:paddingStart="5dp"
            android:paddingEnd="5dp">

            <View
                android:id="@+id/avatar"
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:layout_alignParentStart="true"
                android:layout_marginTop="6dp"
                android:background="@drawable/ic_atlas_gateway_24"
                android:gravity="center"
                android:longClickable="true"
                android:scaleType="centerInside" />

            <LinearLayout
                android:id="@+id/date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginTop="6dp"
                android:layout_toEndOf="@+id/avatar"
                android:longClickable="true"
                android:onClick="@{ () -> callback.onClick(gateway)}"
                android:onLongClick="@{ () -> callback.onLongClick(gateway)}"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/alias"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingBottom="4dp"
                    android:text="@{gateway.alias}"
                    android:textSize="18sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/date"
                android:layout_alignStart="@+id/date"
                android:animateLayoutChanges="true"
                android:clickable="true"
                android:focusable="true"
                android:gravity="end"
                android:longClickable="true"
                android:onClick="@{ () -> callback.onClick(gateway)}"
                android:onLongClick="@{ () -> callback.onLongClick(gateway)}"
                android:orientation="vertical"
                android:paddingVertical="8dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="fill_horizontal">

                    <TextView
                        android:id="@+id/gateway_identity_label_text_view"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingBottom="4dp"
                        android:text="@string/all_identity"
                        android:textSize="15sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/gateway_identity_text_view"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingStart="2dp"
                        android:paddingBottom="2dp"
                        android:text="@{gateway.identity}"
                        android:textAlignment="center"
                        android:textSize="13sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="fill_horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingBottom="4dp"
                        android:text="@string/gateway_claim_time"
                        android:textSize="15sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/gateway_claim_time_text_view"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingStart="2dp"
                        android:paddingBottom="2dp"
                        android:text="@{gateway.claimTime}"
                        android:textAlignment="center"
                        android:textSize="13sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="fill_horizontal">

                    <TextView
                        android:id="@+id/gateway_pending_commands_label_text_view"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingBottom="4dp"
                        android:text="@string/all_pending_commands"
                        android:textSize="15sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/gateway_pending_commands_text_view"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingStart="2dp"
                        android:paddingBottom="2dp"
                        android:text="@{gateway.pendingCommands.toString()}"
                        android:textAlignment="center"
                        android:textSize="13sp" />
                </LinearLayout>
            </LinearLayout>
        </RelativeLayout>
    </androidx.cardview.widget.CardView>
</layout>