<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable name="command" type="com.atlas.model.database.AtlasCommand" />
        <variable name="callback" type="com.atlas.ui.command_list.view.CommandApproveCallback" />
        <import type="android.view.View" />
    </data>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="3dp"
        android:layout_marginRight="3dp"
        android:orientation="horizontal"
        app:cardUseCompatPadding="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#ffffff"
            android:clipToPadding="false"
            android:paddingVertical="3dp"
            android:paddingStart="5dp"
            android:paddingEnd="5dp">

            <View
                android:id="@+id/avatar"
                android:layout_width="18dp"
                android:layout_height="18dp"
                android:layout_alignParentStart="true"
                android:layout_marginTop="5dp"
                android:background="@drawable/ic_atlas_command_24"
                android:gravity="center"
                android:scaleType="centerInside" />

            <LinearLayout
                android:id="@+id/date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginTop="3dp"
                android:layout_toEndOf="@+id/avatar"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/command_type"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingBottom="4dp"
                    android:text="@{command.getType()}"
                    android:textSize="16sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/date"
                android:layout_alignStart="@+id/date"
                android:animateLayoutChanges="true"
                android:clickable="true"
                android:focusable="true"
                android:gravity="end"
                android:orientation="vertical"
                android:paddingVertical="8dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="fill_horizontal">

                    <TextView
                        android:id="@+id/seq_nr_message"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingBottom="4dp"
                        android:text="@string/command_sequence_number"
                        android:textSize="15sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/seq_nr"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingBottom="2dp"
                        android:paddingStart="2dp"
                        android:text="@{command.seqNo.toString()}"
                        android:textAlignment="center"
                        android:textSize="13sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="fill_horizontal">

                    <TextView
                        android:id="@+id/create_time_message"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingBottom="4dp"
                        android:text="@string/command_create_time"
                        android:textSize="15sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/create_time"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingBottom="2dp"
                        android:paddingStart="2dp"
                        android:text='@{command.createTime == null ? "N/A" : command.createTime }'
                        android:textAlignment="center"
                        android:textSize="13sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="fill_horizontal">

                    <TextView
                        android:id="@+id/payload_message"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingBottom="4dp"
                        android:text="@string/command_payload"
                        android:textSize="15sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/command_payload"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingBottom="2dp"
                        android:paddingStart="2dp"
                        android:text='@{command.payload.equals("") ? "N/A" : command.payload }'
                        android:textAlignment="center"
                        android:textSize="13sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <Button
                        style="@style/approveButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="3dp"
                        android:text="Approve"
                        android:enabled="@{command.actionButtonsEnabled}"
                        app:visibility="@{command.actionButtonDisplayed? View.VISIBLE : View.GONE }"
                        android:onClick="@{ () -> callback.onApproveButtonClick(command)}" />

                    <Button
                        style="@style/rejectButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Reject"
                        android:enabled="@{command.actionButtonsEnabled }"
                        app:visibility="@{command.actionButtonDisplayed? View.VISIBLE : View.GONE }"
                        android:onClick="@{ () -> callback.onRejectButtonClick(command)}" />

                </LinearLayout>
            </LinearLayout>
        </RelativeLayout>
    </androidx.cardview.widget.CardView>
</layout>